# itm-demo-rtic

./: Cargo.toml  Embed.toml  LICENSE  Makefile.toml  README.md  openocd.sh
.cargo/: config
examples/: STM32F103C8.rs  STM32F303VCT.rs  nRF52840.rs  test.rs
src/: main.rs
